development last-content and adds fontawesome icons at index

--- a/src/app/pages/new-home/components/last-content/last-content.component.html
+++ b/src/app/pages/new-home/components/last-content/last-content.component.html
@@ -1,1 +1,23 @@
-<p>last-content works!</p>
+<div class="mainbox container ">
+    <div class="first-content ">
+        <div class="content d-flex  flex-column pt-5">
+            <h2 class="text-contact text-center h1  py-2 px-4">{{ textContact }}</h2>
+            <p class="text-offers text-center text-muted py-2 px-4">{{ textOffers }}</p>
+        </div>
+        <div class="email d-flex justify-content-center pt-2 pb-0">
+            <button type="button" class="btn btn-light shadow px-3 bg-white rounded">REGÍSTRATE AQUÍ</button>
+        </div>
+    </div>
+    <div class="second-content d-flex flex-column justify-content-center">
+        <div class="contact d-flex justify-content-center ">
+            <p class="h4">{{ textFollowUs }}</p>
+        </div>
+        <div class="socials d-flex justify-content-center">
+            <ul class="list-socials d-flex flex-row justify-content-around m-0 pt-4 px-0 pb-0">
+                <li><a class="social-icon pt-2 " target="_blank" href="https://www.facebook.com/disamaderas/?eid=ARB34pLk4Q0DDAVMOLUHLQxT6GmbQ1jVZJw4On79Jkkc2aN_F5eZ59IEXjAI-ZpAnTpqHF2hdafzD-a7"><span class="fab fa-facebook"></span></a></li>
+                <li><a class="social-icon pt-2 " target="_blank" href="https://www.instagram.com/disainsumos.mendoza/?igshid=10a70cd8jsvc5"><span class="fab fa-instagram"></span></a></li>
+                <li><a class="social-icon pt-2 " target="_blank" href="https://web.whatsapp.com/send?phone=5492613820126&text=Hola,%20me%20contacto%20desde%20la%20web"><span class="fab fa-whatsapp"></span></a></li>
+            </ul>
+        </div>
+    </div>
+</div>
