change styles in header, second-content and put content in most-important-content

--- a/src/app/main-structure/header/header.component.html
+++ b/src/app/main-structure/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="d-flex justify-content-between align-items-center">
   <div class="brand d-flex">
-    <button style="margin-top: -6px;" mat-icon-button class="example-icon d-md-none" aria-label="Example icon-button with menu icon">
+    <button style="margin: auto;" mat-icon-button class="example-icon d-md-none" aria-label="Example icon-button with menu icon">
       <mat-icon  (click)="toggleSidenav()">menu</mat-icon>
     </button>
     <a href="/">
