--- a/src/app/main-structure/navigation-bar/navigation-bar.component.scss
+++ b/src/app/main-structure/navigation-bar/navigation-bar.component.scss
@@ -9,7 +9,7 @@
         
         li a {
             text-decoration: none;
-            color: #b5bbc4;
+            color: #cfcdcd;
             transition: color .4s,text-shadow .4s,font-size .4s;
         }
         
