--- a/src/app/main-structure/header/header.component.scss
+++ b/src/app/main-structure/header/header.component.scss
@@ -1,13 +1,11 @@
 ::ng-deep {
     mat-toolbar {
-        /*background: #002FA7 !important;*/
-        background: linear-gradient(90deg, rgba(255,255,255,1) 6%, rgba(102,132,179,1) 18%, rgba(3,57,139,1) 35%, rgba(2,56,135,1) 51%, rgba(2,36,87,1) 100%) !important;
+        background: #002FA7 !important;
     }
     #main-logo {
         width: 58px;
         height: 58px;
         margin-left: 10px;
-        background: #fff;
         overflow: hidden;
     }
 
