working on products components connect with api

--- a/src/app/pages/new-home/components/most-important-content/most-important-content.component.html
+++ b/src/app/pages/new-home/components/most-important-content/most-important-content.component.html
@@ -3,7 +3,7 @@
         <div class="black-content  d-flex flex-column justify-content-center align-items-center p-5">
             <h3 class="h3 text-center">{{ alphaContain.h3 }}</h3>
             <p class="text-center">{{ alphaContain.p }}</p>
-            <button class="action-sales-btn">{{ alphaContain.button }}</button>
+            <button (click)="navigateProducts()" class="action-sales-btn">{{ alphaContain.button }}</button>
         </div>
     </div>
     <div class="beta">
