--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,10 +1,34 @@
-<div class="container app-products d-flex flex-column flex-md-row justify-content-md-center align-items-center  mt-3 flex-wrap" >
-    
-  <div class="shelving pt-5 pb-2" *ngFor="let product of shelve" style="width: 350px;">
-    <h4 class="text-center">{{ product.name}}</h4>
-    <div class="img-container d-flex flex-column justify-content-end" style="width: 250px; height: 250px; ">
-      <img [src]="product.img" [alt]="product.name" class="img-fluid" style="max-width: 100%; max-height: 100%;">
+<div class="container">
+  <div  class="card mb-3">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img [src]="'/assets/nosotros/stock-placas-01.png'" class="card-img" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
     </div>
   </div>
-  
+
+
+  <div class="row row-cols-1 row-cols-md-3">
+    <div *ngFor="let product of products" class="col mb-4">
+      <div class="card h-100">
+        <img [src]="'/assets/' + product.image" class="card-img-top" [alt]="product.title">
+        <div class="card-body">
+          <h5 class="card-title">{{ product.title }}</h5>
+          <p class="card-text">{{ product.description }}</p>
+        </div>
+        <div class="card-footer text-center">
+          ${{ product.price }}
+        </div>
+
+      </div>
+    </div>
+   
+  </div>
 </div>
