working about products

--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,34 +1,19 @@
-<div class="container">
-  <div  class="card mb-3">
-    <div class="row no-gutters">
-      <div class="col-md-4">
-        <img [src]="'/assets/nosotros/stock-placas-01.png'" class="card-img" alt="...">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+<div class="container py-3">
+  <div *ngIf="products">
+    <div *ngFor="let product of products" class="d-flex w-100 mt-2 pt-3" style="border-top: 1px solid rgb(235, 240, 248);">
+      <figure  style="width: 37%">
+        <img class="img-fluid" [src]="'/assets/' + product.image" [alt]="product.title" style="border-radius: 0.3em;">
+      </figure>
+      <div class="d-flex flex-column justify-content-between p-4 pl-4" style="width: 63%;" >
+        <div >
+          <h4 class=" h5">{{ product.title}}</h4>
+          <p >{{ product.description }}</p>
+        </div>
+        <div class="text-center">
+          <span >${{ product.price}}</span>
         </div>
       </div>
+      
     </div>
-  </div>
-
-
-  <div class="row row-cols-1 row-cols-md-3">
-    <div *ngFor="let product of products" class="col mb-4">
-      <div class="card h-100">
-        <img [src]="'/assets/' + product.image" class="card-img-top" [alt]="product.title">
-        <div class="card-body">
-          <h5 class="card-title">{{ product.title }}</h5>
-          <p class="card-text">{{ product.description }}</p>
-        </div>
-        <div class="card-footer text-center">
-          ${{ product.price }}
-        </div>
-
-      </div>
-    </div>
-   
   </div>
 </div>
