--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,12 @@
 map-sidenav-component {
-    height: 100%;
-  }
-  
-  mat-sidenav-container,
-  mat-sidenav {
-    height: 100%;
-  }
+  height: 100%;
+}
+
+mat-sidenav-container,
+mat-sidenav {
+  height: 100%;
+}
+
+body {
+  background: red;
+}
