--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -1,12 +1,63 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
-::ng-deep {
-    .app-products {
-        .shelving {
-            border-left: rgba( 64, 144, 229, 0.5) solid 16px;
-            border-right: rgba( 64, 144, 229, 0.5) solid 16px;
-            border-top: rgba( 237, 64, 4, 0.67) solid 9px;
-            border-bottom: rgba( 237, 64, 4, 0.67) solid 9px;
-        }
+::ng-deep{
+    app-products {
+        background-color: rgb(240, 240, 240);
     }
+}
+
+.product {
+    background-color: #fff;
+}
+
+
+.jumbotron {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://images.pexels.com/photos/129733/pexels-photo-129733.jpeg?cs=srgb&dl=pexels-fwstudio-129733.jpg&fm=jpg");
+    background-size: cover;
+}
+
+.container h2{
+    color: #fff;
+}
+
+.img-product{
+    overflow: hidden;
+}
+
+.img-product img{
+    transition: all 1s ease;
+}
+
+.img-product img:hover{
+    transform: scale(1.2);
+}
+
+
+.card-img-top {
+    width: 100%;
+    height: 40vh;
+    object-fit: cover;
+}
+
+.card-text{
+    height: 80px !important;
+}
+
+.price span{
+    font-weight: 500;
+}
+
+.image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 1s ease;
+}
+
+.image{
+    overflow: hidden;
+}
+
+.image img:hover{
+    transform: scale(1.2);
 }
